# ParentOS

./: AGENTS.md  AI_ARCHITECTURE.md  API_SPEC.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  DATABASE_SCHEMA.md  DECISIONS.md  PRD.md  Project.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  UX_FLOWS.md  render.yaml
.github/workflows/: ci.yml
apps/backend/: .env.example  Dockerfile  ParentOS.code-workspace  README.md  conftest.py  main.py  pyproject.toml
apps/backend/app/: access.py  anomalies.py  config.py  database.py  dates.py  dependencies.py  errors.py  metrics.py
apps/backend/app/routers/: auth.py  children.py  diapers.py  feedings.py  insights.py  sleeps.py
apps/backend/app/schemas/: auth.py  children.py  diapers.py  feedings.py  insights.py  sleeps.py
apps/backend/tests/: test_anomalies.py  test_auth.py  test_children.py  test_diapers.py  test_feedings.py  test_metrics.py  test_rls.py  test_sleeps.py
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: config.dart  main.dart  router.dart
apps/mobile/lib/models/: child.dart  diaper.dart  feeding.dart  sleep.dart
apps/mobile/lib/providers/: auth_provider.dart  children_provider.dart  diapers_provider.dart  feedings_provider.dart  sleeps_provider.dart
apps/mobile/lib/screens/: add_child_screen.dart  (+7 more)
apps/mobile/linux/: CMakeLists.txt
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
(+16 files in other folders)
