[tool.poetry]
name = "parentos-backend"
version = "0.1.0"
description = "ParentOS API backend"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
supabase = "^2.10.0"
pydantic-settings = "^2.6.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
slowapi = "^0.1.9"
httpx = "^0.27.0"
openai = "^1.54.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
